--- a/src/App.scss
+++ b/src/App.scss
@@ -1,2 +1,3 @@
 @import './components/Home/Home';
-@import './components/Navbar/Navbar'
+@import './components/Navbar/Navbar';
+@import './components//Cart/Cart'
