--- a/src/components/Navbar/_Navbar.scss
+++ b/src/components/Navbar/_Navbar.scss
@@ -1,16 +1,10 @@
 .navbar {
-    
     font-family: 'Montserrat', sans-serif;
-  
-    height: 50px;
+    height: 2.5em;
     ;
-    
-    
-
 }
 .nav {
     position: absolute; 
-  
     height: 50px;
     display: flex;
     justify-content: space-between;
