--- a/src/components/Navbar/_Navbar.scss
+++ b/src/components/Navbar/_Navbar.scss
@@ -1,19 +1,20 @@
 .navbar {
     font-family: 'Montserrat', sans-serif;
     height: 2.5em;
-    ;
+    
+
 }
 .nav {
     position: absolute; 
+    right: 30px;
     height: 50px;
     display: flex;
     justify-content: space-between;
     align-items: center;
     width: 34.375em;
+    a{ color: black;
+       text-decoration: none;
+       text-transform: uppercase;
+    }
  }
-.navButton { 
-    
-    text-transform: uppercase;
-    text-decoration: none;
-    color: black;
-}
+
