--- a/src/App.scss
+++ b/src/App.scss
@@ -1,3 +1,4 @@
 @import './components/Home/Home';
 @import './components/Navbar/Navbar';
-@import './components//Cart/Cart'
+@import './components//Cart/Cart';
+@import './components//Navbar//NavigationPage'
