--- a/src/components/Navbar/_Navbar.scss
+++ b/src/components/Navbar/_Navbar.scss
@@ -1,20 +1,48 @@
 .navbar {
     font-family: 'Montserrat', sans-serif;
-    height: 2.5em;
+    height: 100px;
     
-
+    }
+.company {
+    position: absolute;
+    left: 100px;
+}
+.logo {
+    position: relative;
+    top: 15px;
+    left: 40px;
+    height:3em;
+    float: left;
 }
 .nav {
     position: absolute; 
+    top: 35px;
     right: 30px;
     height: 50px;
     display: flex;
     justify-content: space-between;
-    align-items: center;
+   
     width: 34.375em;
     a{ color: black;
        text-decoration: none;
        text-transform: uppercase;
     }
  }
+           
+.menu {
+    display: none;
+    color: black;
+    text-decoration: none;
+    font-size: 35px;
+    position: absolute;
+    top: 25px;
+    right: 40px;
+    
 
+}
+ 
+
+@media (max-width:891px) {
+    .nav {display: none;}
+    .menu {display: flex;}
+}
