--- a/src/App.scss
+++ b/src/App.scss
@@ -1,4 +1,5 @@
 @import './components/Home/Home';
 @import './components/Navbar/Navbar';
 @import './components//Cart/Cart';
-@import './components//Navbar//NavigationPage'
+@import './components//Navbar//NavigationPage';
+@import './components/Login/Login'
