--- a/src/components/Login/_Login.scss
+++ b/src/components/Login/_Login.scss
@@ -7,13 +7,15 @@
     align-items: center;
 }
 .Login {
+    background-color: white;
     padding: 50px;
-    height: 120px;
+    height: 150px;
     width: 30%;
     display: flex;
     flex-direction: column;
     border-style: solid;
     border-width: 1px;
+    border-radius: 25px;
 }
 .title {
     font-size: 25px;
@@ -28,3 +30,19 @@
  
 }
 
+.background {
+    position: absolute;
+    width: 100%;
+    top: 100px;
+    z-index: -1;
+    opacity: .9;
+    
+}
+
+.address {
+    width: 100%;
+    height:100px;
+    background-color: white;
+    position: absolute;
+    bottom: -250px;
+}
