--- a/src/components/Login/_Login.scss
+++ b/src/components/Login/_Login.scss
@@ -8,6 +8,8 @@
 }
 .Login {
     background-color: white;
+    position: relative;
+    top:30%;
     padding: 50px;
     height: 150px;
     width: 30%;
@@ -15,7 +17,8 @@
     flex-direction: column;
     border-style: solid;
     border-width: 1px;
-    border-radius: 25px;
+    
+    
 }
 .title {
     font-size: 25px;
@@ -31,18 +34,18 @@
 }
 
 .background {
-    position: absolute;
+    position: fixed;
     width: 100%;
-    top: 100px;
-    z-index: -1;
+    top: 0;
+    z-index: -9;
     opacity: .9;
     
 }
 
 .address {
     width: 100%;
-    height:100px;
+    height: 100px;
     background-color: white;
     position: absolute;
-    bottom: -250px;
+    bottom: -260px;
 }
