--- a/src/components/Home/_Home.scss
+++ b/src/components/Home/_Home.scss
@@ -1,24 +1,50 @@
 .postImage {
-    width: 600px;
-    
+    height: 600px;
+    width:600px;
+    object-fit: cover;
+    overflow:hidden;
+    float: left;
 }
-
+.content {
+  display: flex;
+  justify-content: space-evenly;
+}
+.text {
+  position: relative;
+  left: 2%;
+  display: flex;
+  flex-direction: column;
+}
+.white {
+  background-color: white;
+  position: absolute;
+  top: 18%;
+  left: 15%;
+  height: 820px;
+  width: 1100px;
+  opacity: .8;
+}
 .slider {
-    width: 600px;
+    position: absolute;
+    top: 22%;
+    left: -14%;
+    width: 1000px;
+   
     .Posts {
       position: relative;
-        left: 40%;
+        left: 60%;
       .slick-prev, .slick-next {
         position: absolute;
-        top: 35%
+        top: 55%
       }
       .slick-prev {
+        
         left: 5%;
         z-index: 1;
       }
       .slick-next {
-        right: 5%;
-        z-index: -9;
+        right: 40%;
+        z-index: 1;
       }
     }
 }
@@ -28,6 +54,8 @@
   top:0;
   width: 100%;
   z-index: -1;
+  -webkit-filter: grayscale(30%);
+  filter: grayscale(30%);
 }
 
 .address {
