--- a/src/components/Home/_Home.scss
+++ b/src/components/Home/_Home.scss
@@ -29,7 +29,6 @@
     top: 22%;
     left: -14%;
     width: 1000px;
-   
     .Posts {
       position: relative;
         left: 60%;
@@ -69,4 +68,39 @@
     background-color: aqua;
     width: 100%;
     font-size: 12px;
+}
+
+.adminUpdate {
+  position: relative;
+  top:400px;
+  left: 53%;
+  background-color: white;
+  height: 300px;
+  width: 220px;
+  border-style: solid;
+  border-width: 1px;
+
+}
+
+.adminInputs {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  justify-self: center;
+  align-content: center;
+}
+
+.update {
+  width:150px;
+  position: relative;
+  left: 15%;
+ 
+}
+.button {
+  position: relative;
+  top: 10px;
+  left: 29%;
+  width: 90px;
 }
