--- a/src/App.scss
+++ b/src/App.scss
@@ -2,4 +2,5 @@
 @import './components/Navbar/Navbar';
 @import './components//Cart/Cart';
 @import './components//Navbar//NavigationPage';
-@import './components/Login/Login'
+@import './components/Login/Login';
+@import './components/About/About'
