--- a/src/components/Home/_Home.scss
+++ b/src/components/Home/_Home.scss
@@ -73,7 +73,7 @@
 .adminUpdate {
   position: relative;
   top:400px;
-  left: 53%;
+  left: 55%;
   background-color: white;
   height: 300px;
   width: 220px;
@@ -98,7 +98,7 @@
   left: 15%;
  
 }
-.button {
+.updateButton {
   position: relative;
   top: 10px;
   left: 29%;
