--- a/src/App.scss
+++ b/src/App.scss
@@ -3,4 +3,5 @@
 @import './components//Cart/Cart';
 @import './components//Navbar//NavigationPage';
 @import './components/Login/Login';
-@import './components/About/About'
+@import './components/About/About';
+@import './components/Menu/Menu'
