--- a/src/components/Menu/_Menu.scss
+++ b/src/components/Menu/_Menu.scss
@@ -44,15 +44,19 @@
       }
       .slick-prev {
         
-        left: -2%;
+        left: 10%;
         z-index: 1;
       }
       .slick-next {
-        right: -80%;
+        right: -70%;
         z-index: 1;
         color: black;
       }
     }
+}
+.slick-prev:before,
+.slick-next:before {
+  color: black;
 }
 .dishes {
     height: 300px;
