--- a/src/App.scss
+++ b/src/App.scss
@@ -4,4 +4,5 @@
 @import './components//Navbar//NavigationPage';
 @import './components/Login/Login';
 @import './components/About/About';
-@import './components/Menu/Menu'
+@import './components/Menu/Menu';
+@import './components//Menu/MenuItem'
