--- a/src/App.scss
+++ b/src/App.scss
@@ -5,4 +5,6 @@
 @import './components/Login/Login';
 @import './components/About/About';
 @import './components/Menu/Menu';
-@import './components//Menu/MenuItem'
+@import './components//Menu/MenuItem';
+@import './components//Orders/Orders';
+@import './components//Orders/OrderDetails';
