--- a/src/components/Menu/_Menu.scss
+++ b/src/components/Menu/_Menu.scss
@@ -19,8 +19,9 @@
 .MenuText {
     position: relative;
     top: 80px;
-    left: 48%;
-    width:100px;
+    left: 43%;
+    width:300px;
+    text-align: center;
 
 }
 
