--- a/src/App.scss
+++ b/src/App.scss
@@ -8,3 +8,4 @@
 @import './components//Menu/MenuItem';
 @import './components//Orders/Orders';
 @import './components//Orders/OrderDetails';
+@import './components/Register/Register';
