--- a/src/components/Cart/_Cart.scss
+++ b/src/components/Cart/_Cart.scss
@@ -36,7 +36,7 @@
     position: relative;
     bottom: -65vh;
     right: -69vw;
-    background-color: green;
+    background-color: blue;
     border: none;
     color: white;
     padding: 15px 32px;
