--- a/src/components/Orders/_Orders.scss
+++ b/src/components/Orders/_Orders.scss
@@ -31,7 +31,7 @@ body {
     top: 7vh;
     display: flex;
     height: 40px;
-    background-color: green;
+    background-color: blue;
     border: none;
     color: white;
     text-align: center;
