--- a/src/components/Login/_Login.scss
+++ b/src/components/Login/_Login.scss
@@ -1,24 +1,22 @@
 
-.loginScreen{
-    
-    display: flex;
-    height: 600px;
-    justify-content: center;
-    align-items: center;
-}
+
 .Login {
-    background-color: white;
     position: relative;
-    top:30%;
+    top:10vh;
+    left: 33%;
     padding: 50px;
     height: 150px;
+    text-align: center;
     width: 30%;
     display: flex;
     flex-direction: column;
-    border-style: solid;
-    border-width: 1px;
+  
     
     
+}
+.notMember {
+    position: relative;
+    top: 6em;
 }
 .title {
     font-size: 25px;
@@ -26,13 +24,35 @@
     top:-20px;;
     text-align: center;
 }
-
-.button {
+.homeLogin {
+    position: relative;
+    top: 4vh;
+    background-color:blue;
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
     display: inline-block;
-    padding: 0.35em 1.2em;
- 
+    font-size: 16px;
 }
-
+.homeCancel {
+    position: relative;
+    top: 4em;
+    width: 100%;
+    background-color: red;
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+}
+.loginError {
+    position: relative;
+    top: 6em;
+}
 .background {
     position: fixed;
     width: 100%;
