--- a/src/components/Cart/_Cart.scss
+++ b/src/components/Cart/_Cart.scss
@@ -47,9 +47,9 @@
 }
 
 .total {
-    position: relative;
-    bottom: -62vh;
-    right: -69vw;
+    position: absolute;
+    top:76%;
+    right: 25%;
 
 }
 // .modal {
