--- a/src/components/Home/_Home.scss
+++ b/src/components/Home/_Home.scss
@@ -26,7 +26,7 @@
       left: 25%;
     .slick-prev, .slick-next {
       position: absolute;
-      top: 45%
+      top: 60%;
     }
     .slick-prev {
       
