--- a/src/components/Menu/_Menu.scss
+++ b/src/components/Menu/_Menu.scss
@@ -6,6 +6,8 @@
     flex-direction: column;
     justify-content: center;
     align-content: center;
+    a{ color:black;
+      text-decoration: none;}
 }
 .menuTitle {
     position: absolute;
@@ -34,8 +36,12 @@
 
 .MenuSlider {
     position: relative;
+    top: -3vh;
     left: 3%;
     width:40%;
+    
+   
+    
     .Menu {
       position: relative;
         left: 30%;
@@ -75,4 +81,29 @@
     text-align: center;
     opacity: 0.25;
     color: rgb(0, 0, 0);
+}
+
+.deleteDish {
+  position: relative;
+  width: 30%;
+  background-color: red;
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+}
+.addCartButton {
+  position: relative;
+width: 30%;
+background-color: blue;
+border: none;
+color: white;
+padding: 15px 32px;
+text-align: center;
+text-decoration: none;
+display: inline-block;
+font-size: 16px;
 }
