--- a/src/App.scss
+++ b/src/App.scss
@@ -9,3 +9,4 @@
 @import './components//Orders/Orders';
 @import './components//Orders/OrderDetails';
 @import './components/Register/Register';
+@import './components//Users//Users'
