--- a/src/components/Home/_Home.scss
+++ b/src/components/Home/_Home.scss
@@ -122,9 +122,19 @@
 }
 .updateButton {
   position: relative;
-  top: 10px;
-  left: 29%;
-  width: 90px;
+   top: 8vh;
+   left: 0;
+   width: 100%;
+   display: flex;
+   height: 40px;
+   background-color: blue;
+   border: none;
+   color: white;
+   text-align: center;
+   text-decoration: none;
+   display: inline-block;
+   font-size: 16px;
+   
 }
 
 .postButton {
