--- a/src/components/Orders/_Orders.scss
+++ b/src/components/Orders/_Orders.scss
@@ -14,10 +14,12 @@
    
     display: flex;
     justify-content: space-evenly;
+    margin-top: 5%;
     height: 25vh;
-    width: 20vw;
+    width: 80%;
     display: flex;
     a{ color:black;
+       
         text-decoration: none;}
 }
 
@@ -30,7 +32,7 @@ body {
     position: relative;
      top: 7em;
      left: 4em;
-     width: 80%;
+     width: 20em;
      display: flex;
      height: 40px;
      background-color: blue;
@@ -41,4 +43,19 @@ body {
      display: inline-block;
      font-size: 16px;
      
+  }
+  .CompletedButton {
+    position: relative;
+    top: 7em;
+    left: 6em;
+    width: 20em;
+    display: flex;
+    height: 40px;
+    background-color:green;
+    border: none;
+    color: white;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
   }
