--- a/src/components/Menu/_Menu.scss
+++ b/src/components/Menu/_Menu.scss
@@ -12,12 +12,14 @@
 .menuTitle {
     position: absolute;
     background-color: white;
-    top: 150px;
-    left: 300px;
-    height: 800px;
+    top: 10em;
+    left: 19em;
+    height: 80%;
     width: 70%;
     opacity: .9;
 }
+
+
 .MenuText {
     position: relative;
     top: 80px;
