home,users,about

--- a/src/components/Home/_Home.scss
+++ b/src/components/Home/_Home.scss
@@ -304,8 +304,7 @@
   }
   .home {position: relative;}
   .menuTitle {display: none;}
-  .address {position: absolute;
-    bottom:0;
+  .address { display: none;
     ;
    }
    
