--- a/src/components/About/_About.scss
+++ b/src/components/About/_About.scss
@@ -23,3 +23,15 @@
     text-align: center;
     width: 100%;
 }
+
+@media (max-width: 1023px) {
+.aboutContent {
+    top: 1em;
+}
+}
+
+@media (max-width: 670px) {
+    .aboutContent {
+        flex-direction: column;
+    }
+}
