--- a/src/components/Navbar/_NavigationPage.scss
+++ b/src/components/Navbar/_NavigationPage.scss
@@ -2,14 +2,23 @@
     display: flex;
     position: absolute;
     flex-direction: column;
-    align-content: center;
+    width: 100%;
+    font-size: 20px;
+    text-align: center;
+    justify-content: center;
     background-color: white;
-    height: 100%;
+    height: 100vh;
     a{ color:black;
        text-decoration: none;}
 }
 
 .Buttons { 
-    height: 20%;
-    border: 2px black;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 3em;
+    width: 99vw;
+    border-style: solid;
+    border-width: .5px;
+    border-color: black;
 }
