--- a/src/components/Menu/_Menu.scss
+++ b/src/components/Menu/_Menu.scss
@@ -108,11 +108,12 @@
 
 .deleteDish {
   position: relative;
-  width: 30%;
+  height: 3em;
+  width: 6em;
   background-color: red;
   border: none;
   color: white;
-  padding: 15px 32px;
+  padding: 10px 25px;
   text-align: center;
   text-decoration: none;
   display: inline-block;
@@ -202,6 +203,7 @@ font-size: 16px;
 }
 }
 @media (max-width: 691px) {
+  
   .addNewDish { 
     top:0;
     left: 8em;
