--- a/src/components/Orders/_Orders.scss
+++ b/src/components/Orders/_Orders.scss
@@ -6,7 +6,16 @@
     height:65vh;
     width: 60vw;
     overflow: scroll;
-    
+    @include bp(ipad) {
+        width: 100vw;
+        top: 1em;
+        left: 0;
+    }
+    @include bp(iphone6P) {
+        width: 100vw;
+        top: 1em;
+        left: 0;
+    }
     
 }
 
@@ -14,13 +23,25 @@
    
     display: flex;
     justify-content: space-evenly;
-    margin-top: 5%;
+    padding-bottom: 25%;
     height: 25vh;
     width: 80%;
     display: flex;
     a{ color:black;
        
         text-decoration: none;}
+    @include bp(smallDesk) {
+        position: relative;
+        left: 10%;
+        }
+    @include bp(mobile) {
+        left:2%;
+        
+    }
+    @include bp(iphone6P) {
+        width: 100vw;;
+        
+    }
 }
 
 body {
@@ -42,6 +63,11 @@ body {
      text-decoration: none;
      display: inline-block;
      font-size: 16px;
+     @include bp(iphone6P) {
+         top:2em;
+         left: 7em;
+         width:12em;
+     }
      
   }
   .CompletedButton {
@@ -58,4 +84,9 @@ body {
     text-decoration: none;
     display: inline-block;
     font-size: 16px;
+    @include bp(iphone6P) {
+        top:8em;
+        left: -2em;;
+        width:12em;
+    }
   }
