--- a/src/App.scss
+++ b/src/App.scss
@@ -10,4 +10,5 @@
 @import './components//Orders/Orders';
 @import './components//Orders/OrderDetails';
 @import './components/Register/Register';
-@import './components//Users//Users'
+@import './components//Users/Users';
+@import './components/CreateNewDish/CreateNewDish.scss'
