--- a/src/components/Menu/_MenuItem.scss
+++ b/src/components/Menu/_MenuItem.scss
@@ -92,6 +92,12 @@ font-size: 16px;
         width: 39vw;
         left: 50%;
     }
+    @include bp(iphone6P) {
+        margin-top: 25px;
+        font-size: 12px;
+        width:55vw;
+        
+    }
     @include bp(ipadPro) {
         top:15vh;
         left:70%;
@@ -107,6 +113,9 @@ font-size: 16px;
     }
     @include bp(ipadPro) {
         top:-9vh;
+    }
+    @include bp(iphone6) {
+        font-size: 20px;
     }
     @include bp(ipad) {
         top: -15vh;
@@ -143,7 +152,7 @@ font-size: 16px;
         left: -9.5vw;
     }
     @include bp(iphone6) {
-        top: 44vh;
+        top: 48vh;
         width:9em;
     }
     @include bp(iphone5) {
